--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       </div>
     </div>
     <div class="game-area">
+      <p class="warning">
+        PLEASE USE PHONE IN LANDSCAPE MODE FOR BETTER EXPERIENCE!
+      </p>
       <div class="score">0</div>
       <div class="sprite"></div>
       <div class="platform"></div>
@@ -46,6 +49,8 @@
 
         <p>Press any key/touch to play again</p>
       </div>
+      <audio class="main-audio" src="./audio/bg.mp3"></audio>
+      <audio class="jump-audio" src="./audio/jump.wav"></audio>
     </div>
     <script src="./app.js"></script>
   </body>
