--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./styles.css" />
-    <title>Platformer Game</title>
+    <title>Joey Jumps</title>
   </head>
   <body>
     <div class="welcome">
