--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="welcome">
       <div class="head">
-        <h1>PLATFORMER GAME</h1>
+        <h1>JOEY JUMPS</h1>
         <h3>- by Joy</h3>
         <h4>Press any key/touch to start the game</h4>
         <h2>HOW TO PLAY</h2>
